--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
     margin: 0px;
     padding: 0px;
     font-family: Arial, Helvetica, sans-serif;
-    color: #000;
+    color: rgb(22, 21, 21);
 }
 a {
     text-decoration: none;
@@ -66,22 +66,22 @@ a {
     border-radius: .25rem;
 }
 .btn-success {
-    background-color: #198754;
+    background-color: #000000;
 }
 .btn-primary {
-    background-color: #0d6efd;
+    background-color: #1d68da;
 }
 .btn-danger {
-    background-color: #dc3545;
+    background-color: #720dac;
 }
 .text-white {
-    color: #FFF;
+    color: rgb(255, 254, 254);
 }
 .text-success {
-    color: #198754;
+    color: #0eb116;
 }
 .text-error {
-    color: #dc3545;
+    color: #70050e;
 }
 .footer {
     width: 100%;
